<resources>
    <string name="app_name">WorkoutFinalProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_workout">Workout</string>
    <string name="title_dietary">Dietary</string>
    <string name="new_diary">Create New Diary</string>
    <string name="dietary_food_name_hint">Enter type of food here</string>
    <string name="dietary_food_title">Food</string>
    <string name="dietary_quantity_hint">Enter quantity here</string>
    <string name="dietary_food_quantity">Quantity</string>
    <string name="dietary_planned_date">Planned Date</string>
    <string name="dietary_planned_time">Planned Time</string>
    <string name="dialog_delete_confirmation">Are you sure you want to delete?</string>
    <string name="confirm_deletion">Delete</string>
    <string name="cancel_deletion">Cancel</string>
    <string name="workout_running_distance_text">Distance</string>
    <string name="workout_distance_hint">Enter distance in kilometer</string>
    <string name="workout_pushup_times_text">Times</string>
    <string name="workout_pushup_times_hint">Enter the expected time for pushup</string>
    <string name="is_done_label">Completed</string>
    <string name="exercise_complete_text">Completed</string>
    <string name="notification_channel_name">Exercises Notification</string>
</resources>