<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.dietary.DietaryDetailFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/dietary_food_title" />

        <EditText
            android:id="@+id/food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dietary_food_name_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/dietary_food_quantity" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dietary_quantity_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/dietary_planned_date" />

        <Button
            android:id="@+id/dietary_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Wed May 11 2022"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/dietary_planned_time" />

        <Button
            android:id="@+id/dietary_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="09:15:00 AM"/>
    </LinearLayout>

    <Button
        android:id="@+id/dietary_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Edit"/>

</LinearLayout>